exports[`test mas 1`] = `
Array [
  Object {
    "file": "Test App ßW-1.1.0.pkg",
    "safeArtifactName": "TestApp-1.1.0.pkg",
  },
]
`;

exports[`test mas and 7z 1`] = `
Array [
  Object {
    "file": "Test App ßW-1.1.0.pkg",
    "safeArtifactName": "TestApp-1.1.0.pkg",
  },
  Object {
    "file": "Test App ßW-1.1.0-mac.7z",
    "safeArtifactName": "TestApp-1.1.0-mac.7z",
  },
]
`;
